--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
     "description": "Barnes Focus implementation with AWS Lambda functions provided server functionality",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build-server": "tsc -p server/",
+        "run-dev-server": "nodemon dist/server/app.js",
+        "watch-server": "tsc -w -p server",
+        "dev": " concurrently \"npm run watch-server\" \"npm run run-dev-server\""
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@elastic/elasticsearch": "^7.5.1",
         "cookie-parser": "^1.4.6",
         "dotenv": "^16.0.0",
         "express": "^4.18.1",
@@ -21,6 +26,7 @@
         "@types/node": "^17.0.31",
         "@typescript-eslint/eslint-plugin": "^5.22.0",
         "@typescript-eslint/parser": "^5.22.0",
+        "concurrently": "^7.1.0",
         "eslint": "^8.14.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-airbnb-typescript": "^17.0.0",
@@ -30,6 +36,8 @@
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.29.4",
         "eslint-plugin-react-hooks": "^4.5.0",
-        "prettier": "^2.6.2"
+        "nodemon": "^2.0.16",
+        "prettier": "^2.6.2",
+        "typescript": "^4.6.4"
     }
 }
