--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "license": "ISC",
     "dependencies": {
         "@elastic/elasticsearch": "^7.5.1",
+        "@prisma/client": "^3.14.0",
         "cookie-parser": "^1.4.6",
         "dotenv": "^16.0.0",
         "express": "^4.18.1",
@@ -38,6 +39,7 @@
         "eslint-plugin-react-hooks": "^4.5.0",
         "nodemon": "^2.0.16",
         "prettier": "^2.6.2",
+        "prisma": "^3.14.0",
         "typescript": "^4.6.4"
     }
 }
