--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
         "@elastic/elasticsearch": "^7.5.1",
         "@prisma/client": "^3.14.0",
         "axios": "^0.27.2",
+        "connect-pg-simple": "^7.0.0",
         "cookie-parser": "^1.4.6",
         "dotenv": "^16.0.0",
         "express": "^4.18.1",
+        "express-session": "^1.17.3",
         "multer": "^1.4.4",
+        "pg": "^8.7.3",
         "serverless-http": "^3.0.1"
     },
     "devDependencies": {
+        "@types/connect-pg-simple": "^7.0.0",
         "@types/express": "^4.17.13",
+        "@types/express-session": "^1.17.4",
         "@types/multer": "^1.4.7",
         "@types/node": "^17.0.31",
         "@typescript-eslint/eslint-plugin": "^5.22.0",
