--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "license": "ISC",
     "dependencies": {
         "@elastic/elasticsearch": "^7.5.1",
+        "@google-cloud/translate": "^7.0.0",
         "@prisma/client": "^3.14.0",
         "axios": "^0.27.2",
         "connect-pg-simple": "^7.0.0",
