--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.131.0",
         "@elastic/elasticsearch": "^7.5.1",
         "@google-cloud/translate": "^7.0.0",
         "@prisma/client": "^3.14.0",
