--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "express": "^4.18.1",
         "express-session": "^1.17.3",
         "multer": "^1.4.4",
+        "nodemailer": "^6.7.7",
         "pg": "^8.7.3",
         "serverless-http": "^3.0.1"
     },
@@ -33,6 +34,7 @@
         "@types/express-session": "^1.17.4",
         "@types/multer": "^1.4.7",
         "@types/node": "^17.0.31",
+        "@types/nodemailer": "^6.4.4",
         "@typescript-eslint/eslint-plugin": "^5.22.0",
         "@typescript-eslint/parser": "^5.22.0",
         "concurrently": "^7.1.0",
