--- a/package.json
+++ b/package.json
@@ -1,17 +1,7 @@
 {
-    "name": "barnes-focus",
-    "version": "1.0.0",
-    "description": "Barnes Focus implementation with AWS Lambda functions provided server functionality",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "build-server": "tsc -p server/",
-        "run-dev-server": "nodemon dist/server/app.js",
-        "watch-server": "tsc -w -p server",
-        "dev": " concurrently \"npm run watch-server\" \"npm run run-dev-server\""
-    },
-    "author": "",
-    "license": "ISC",
+    "name": "barnes-focus-lambda",
+    "version": "0.1.0",
+    "private": true,
     "dependencies": {
         "@aws-sdk/client-s3": "^3.131.0",
         "@elastic/elasticsearch": "^7.5.1",
@@ -28,12 +18,39 @@
         "pg": "^8.7.3",
         "serverless-http": "^3.0.1"
     },
+    "scripts": {
+        "start": "PORT=3006 react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "build-server": "tsc -p server/",
+        "local-server": "nodemon dist/server/app.js",
+        "watch-server": "tsc -w -p server",
+        "dev": " concurrently \"npm run watch-server\" \"npm run run-dev-server\""
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
     "devDependencies": {
         "@types/connect-pg-simple": "^7.0.0",
         "@types/express": "^4.17.13",
         "@types/express-session": "^1.17.4",
         "@types/multer": "^1.4.7",
-        "@types/node": "^17.0.31",
         "@types/nodemailer": "^6.4.4",
         "@typescript-eslint/eslint-plugin": "^5.22.0",
         "@typescript-eslint/parser": "^5.22.0",
@@ -50,6 +67,17 @@
         "nodemon": "^2.0.16",
         "prettier": "^2.6.2",
         "prisma": "^3.14.0",
-        "typescript": "^4.6.4"
+        "typescript": "^4.6.4",
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^13.3.0",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^27.5.2",
+        "@types/node": "^16.11.45",
+        "@types/react": "^18.0.15",
+        "@types/react-dom": "^18.0.6",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-scripts": "5.0.1",
+        "web-vitals": "^2.1.4"
     }
 }
