--- a/package.json
+++ b/package.json
@@ -47,11 +47,18 @@
         ]
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^13.3.0",
+        "@testing-library/user-event": "^13.5.0",
         "@types/connect-pg-simple": "^7.0.0",
         "@types/express": "^4.17.13",
         "@types/express-session": "^1.17.4",
+        "@types/jest": "^27.5.2",
         "@types/multer": "^1.4.7",
+        "@types/node": "^16.11.45",
         "@types/nodemailer": "^6.4.4",
+        "@types/react": "^18.0.15",
+        "@types/react-dom": "^18.0.6",
         "@typescript-eslint/eslint-plugin": "^5.22.0",
         "@typescript-eslint/parser": "^5.22.0",
         "concurrently": "^7.1.0",
@@ -67,17 +74,11 @@
         "nodemon": "^2.0.16",
         "prettier": "^2.6.2",
         "prisma": "^3.14.0",
-        "typescript": "^4.6.4",
-        "@testing-library/jest-dom": "^5.16.4",
-        "@testing-library/react": "^13.3.0",
-        "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^27.5.2",
-        "@types/node": "^16.11.45",
-        "@types/react": "^18.0.15",
-        "@types/react-dom": "^18.0.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
+        "sass": "^1.54.0",
+        "typescript": "^4.6.4",
         "web-vitals": "^2.1.4"
     }
 }
