--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
         "@types/nodemailer": "^6.4.4",
         "@types/react": "^18.0.15",
         "@types/react-dom": "^18.0.6",
+        "@types/react-modal": "^3.13.1",
+        "@types/react-router-dom": "^5.3.3",
         "@typescript-eslint/eslint-plugin": "^5.22.0",
         "@typescript-eslint/parser": "^5.22.0",
         "concurrently": "^7.1.0",
@@ -75,9 +77,19 @@
         "prettier": "^2.6.2",
         "prisma": "^3.14.0",
         "react": "^18.2.0",
+        "react-device-detect": "^2.2.2",
         "react-dom": "^18.2.0",
+        "react-modal": "^3.15.1",
+        "react-pose": "^4.0.10",
+        "react-progressive-image": "^0.6.0",
+        "react-router-dom": "^5.3.0",
         "react-scripts": "5.0.1",
+        "react-scrollmagic": "^2.1.0",
+        "react-textfit": "^1.1.1",
         "sass": "^1.54.0",
+        "scrollmagic": "^2.0.7",
+        "scrollmagic-plugin-gsap": "^1.0.3",
+        "styled-components": "^4.3.2",
         "typescript": "^4.6.4",
         "web-vitals": "^2.1.4"
     }
