--- a/package.json
+++ b/package.json
@@ -73,12 +73,14 @@
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.29.4",
         "eslint-plugin-react-hooks": "^4.5.0",
+        "gsap": "^2.1.3",
         "nodemon": "^2.0.16",
         "prettier": "^2.6.2",
         "prisma": "^3.14.0",
         "react": "^18.2.0",
         "react-device-detect": "^2.2.2",
         "react-dom": "^18.2.0",
+        "react-gsap": "^1.2.0",
         "react-modal": "^3.15.1",
         "react-pose": "^4.0.10",
         "react-progressive-image": "^0.6.0",
@@ -86,6 +88,8 @@
         "react-scripts": "5.0.1",
         "react-scrollmagic": "^2.1.0",
         "react-textfit": "^1.1.1",
+        "react-visibility-sensor": "^5.1.1",
+        "reactstrap": "^7.1.0",
         "sass": "^1.54.0",
         "scrollmagic": "^2.0.7",
         "scrollmagic-plugin-gsap": "^1.0.3",
