--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
         "prettier": "^2.6.2",
         "prisma": "^3.14.0",
         "react": "^18.2.0",
+        "react-crossfade-image": "^1.1.1",
         "react-device-detect": "^2.2.2",
         "react-dom": "^18.2.0",
         "react-gsap": "^1.2.0",
@@ -87,6 +88,7 @@
         "react-router-dom": "^5.3.0",
         "react-scripts": "5.0.1",
         "react-scrollmagic": "^2.1.0",
+        "react-slick": "^0.23.2",
         "react-textfit": "^1.1.1",
         "react-visibility-sensor": "^5.1.1",
         "reactstrap": "^7.1.0",
