additional packages needed by components

--- a/package.json
+++ b/package.json
@@ -77,7 +77,9 @@
         "nodemon": "^2.0.16",
         "prettier": "^2.6.2",
         "prisma": "^3.14.0",
+        "query-string": "^6.8.1",
         "react": "^18.2.0",
+        "react-addons-css-transition-group": "^15.6.2",
         "react-crossfade-image": "^1.1.1",
         "react-device-detect": "^2.2.2",
         "react-dom": "^18.2.0",
@@ -92,6 +94,7 @@
         "react-textfit": "^1.1.1",
         "react-visibility-sensor": "^5.1.1",
         "reactstrap": "^7.1.0",
+        "redux": "^4.0.1",
         "sass": "^1.54.0",
         "scrollmagic": "^2.0.7",
         "scrollmagic-plugin-gsap": "^1.0.3",
