--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "@types/react-router-dom": "^5.3.3",
         "@typescript-eslint/eslint-plugin": "^5.22.0",
         "@typescript-eslint/parser": "^5.22.0",
+        "bootstrap": "^4.0.0",
         "concurrently": "^7.1.0",
         "eslint": "^8.14.0",
         "eslint-config-airbnb": "^19.0.4",
@@ -73,6 +74,7 @@
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.29.4",
         "eslint-plugin-react-hooks": "^4.5.0",
+        "font-awesome": "^4.7.0",
         "gsap": "^2.1.3",
         "nodemon": "^2.0.16",
         "prettier": "^2.6.2",
@@ -98,6 +100,7 @@
         "sass": "^1.54.0",
         "scrollmagic": "^2.0.7",
         "scrollmagic-plugin-gsap": "^1.0.3",
+        "slick-carousel": "^1.8.1",
         "styled-components": "^4.3.2",
         "typescript": "^4.6.4",
         "web-vitals": "^2.1.4"
