--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
         "font-awesome": "^4.7.0",
         "gsap": "^2.1.3",
         "nodemon": "^2.0.16",
+        "normalize.css": "^8.0.0",
         "prettier": "^2.6.2",
         "prisma": "^3.14.0",
         "query-string": "^6.8.1",
@@ -104,5 +105,6 @@
         "styled-components": "^4.3.2",
         "typescript": "^4.6.4",
         "web-vitals": "^2.1.4"
-    }
+    },
+    "proxy": "http://localhost:4006"
 }
