--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,22 +10,22 @@
 		"skipLibCheck": true,
 		"esModuleInterop": true,
 		"allowSyntheticDefaultImports": true,
-		"strict": false,
+		"strict": true,
 		"forceConsistentCasingInFileNames": true,
+		"noFallthroughCasesInSwitch": true,
 		"module": "esnext",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"noEmit": true,
-		"noImplicitAny": false,
-		"jsx": "preserve",
-		"outDir": "./dist",
-		"baseUrl": ".", /* Base directory to resolve non-absolute module names. */
+		"jsx": "react-jsx"
 	},
 	"include": [
 		"src"
 	],
 	"exclude": [
-		"server"
+		"server",
+		"dist",
+		"node_modules"
 	]
 }
