--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
         "@types/react": "^18.0.15",
         "@types/react-dom": "^18.0.6",
         "@types/react-modal": "^3.13.1",
-        "@types/react-router-dom": "^5.3.3",
         "@typescript-eslint/eslint-plugin": "^5.22.0",
         "@typescript-eslint/parser": "^5.22.0",
         "bootstrap": "^4.0.0",
@@ -77,8 +76,10 @@
         "eslint-plugin-react-hooks": "^4.5.0",
         "font-awesome": "^4.7.0",
         "gsap": "^2.1.3",
+        "jquery": "^3.3.1",
         "nodemon": "^2.0.16",
         "normalize.css": "^8.0.0",
+        "popper.js": "^1.12.9",
         "prettier": "^2.6.2",
         "prisma": "^3.14.0",
         "query-string": "^6.8.1",
@@ -88,10 +89,10 @@
         "react-device-detect": "^2.2.2",
         "react-dom": "^18.2.0",
         "react-gsap": "^1.2.0",
-        "react-modal": "^3.15.1",
+        "react-modal": "^3.3.2",
         "react-pose": "^4.0.10",
         "react-progressive-image": "^0.6.0",
-        "react-router-dom": "^5.3.0",
+        "react-router-dom": "^4.2.2",
         "react-scripts": "5.0.1",
         "react-scrollmagic": "^2.1.0",
         "react-slick": "^0.23.2",
