--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
         "font-awesome": "^4.7.0",
         "gsap": "^2.1.3",
         "jquery": "^3.3.1",
+        "lodash.throttle": "^4.1.1",
         "nodemon": "^2.0.16",
         "normalize.css": "^8.0.0",
         "popper.js": "^1.12.9",
@@ -90,13 +91,13 @@
         "react-dom": "^18.2.0",
         "react-gsap": "^1.2.0",
         "react-modal": "^3.3.2",
-        "react-pose": "^4.0.10",
+        "react-pose": "^4.0.5",
         "react-progressive-image": "^0.6.0",
         "react-router-dom": "^4.2.2",
         "react-scripts": "5.0.1",
         "react-scrollmagic": "^2.1.0",
         "react-slick": "^0.23.2",
-        "react-textfit": "^1.1.1",
+        "react-textfit": "^1.1.0",
         "react-visibility-sensor": "^5.1.1",
         "reactstrap": "^7.1.0",
         "redux": "^4.0.1",
