add more variabes to template

--- a/.env-template
+++ b/.env-template
@@ -1,5 +1,5 @@
 PORT=4006
-NODE_ENV="local"
+NODE_ENV=""
 
 ES_USERNAME=""
 ES_PASSWORD=""
@@ -16,7 +16,16 @@ AWS_REGION="us-east-1"
 AWS_ACCESS_KEY_ID=""
 AWS_SECRET_ACCESS_KEY=""
 
-IMGIX_REPO=""
+REACT_APP_CATCHOOM_ACCESS_TOKEN=""
+REACT_APP_CATCHOOM_REQUEST_URL="https://search.craftar.net/v1/search"
+
+SENDGRID_USERNAME=""
+SENDGRID_PASSWORD=""
+SENDGRID_EMAIL=""
+SENDGRID_DOMAIN=""
+SENDGRID_ADDRESS=""
+
+IMGIX_REPO="barnes-images"
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
