--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "connect-pg-simple": "^7.0.0",
         "cookie-parser": "^1.4.6",
         "dotenv": "^16.0.0",
+        "email-templates": "^10.0.1",
         "email-validator": "^2.0.4",
         "express": "^4.18.1",
         "express-session": "^1.17.3",
@@ -49,6 +50,7 @@
     },
     "devDependencies": {
         "@types/connect-pg-simple": "^7.0.0",
+        "@types/email-templates": "^10.0.0",
         "@types/express": "^4.17.13",
         "@types/express-session": "^1.17.4",
         "@types/jest": "^27.5.2",
