--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "connect-pg-simple": "^7.0.0",
         "cookie-parser": "^1.4.6",
         "dotenv": "^16.0.0",
+        "ejs": "^3.1.8",
         "email-templates": "^10.0.1",
         "email-validator": "^2.0.4",
         "express": "^4.18.1",
@@ -26,7 +27,7 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "build-server": "tsc -p server/",
-        "local-server": "nodemon dist/server/app.js",
+        "local-server": "NODE_DEBUG=email-templates nodemon dist/server/app.js",
         "watch-server": "tsc -w -p server",
         "dev": " concurrently \"npm run watch-server\" \"npm run run-dev-server\""
     },
