--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "barnes-focus-lambda",
     "version": "0.1.0",
     "private": true,
+    "prisma": {
+        "seed": "npx ts-node --compiler-options {\"module\":\"CommonJS\"} ./prisma/seeds/translations/index.ts"
+    },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.131.0",
         "@elastic/elasticsearch": "^7.5.1",
