--- a/.env-template
+++ b/.env-template
@@ -34,4 +34,4 @@ IMGIX_REPO="barnes-images"
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB (Preview).
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://<DATABASE_USER>:<DATABASE_PASSWORD>@<DATABASE_HOST>:5432/<DATABASE_NAME?schema=public"
+DATABASE_URL="postgresql://<DATABASE_USER>:<DATABASE_PASSWORD>@<DATABASE_HOST>:5432/<DATABASE_NAME>?schema=public"
