install aws-lambda

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "start": "PORT=3006 react-scripts start",
         "client-build": "TSC_COMPILE_ON_ERROR=true react-scripts build",
         "build": "npm run client-build && rm -rf dist && npm run build-server",
-		"postbuild": "cp -r build dist && rm -rf build",
+        "postbuild": "cp -r build dist && rm -rf build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "build-server": "tsc -p server/",
@@ -68,6 +68,7 @@
         "@types/react-modal": "^3.13.1",
         "@typescript-eslint/eslint-plugin": "^5.22.0",
         "@typescript-eslint/parser": "^5.22.0",
+        "aws-lambda": "^1.0.7",
         "bootstrap": "^4.0.0",
         "concurrently": "^7.1.0",
         "eslint": "^8.14.0",
