--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "start": "PORT=3006 react-scripts start",
         "client-build": "TSC_COMPILE_ON_ERROR=true react-scripts build",
         "build": "npm run client-build && rm -rf dist && npm run build-server",
-        "postbuild": "cp -r build dist && rm -rf build",
+        "postbuild": "cp -r build dist && rm -rf build && make views",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "build-server": "tsc -p server/",
