--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.131.0",
+        "@aws-sdk/client-translate": "^3.159.0",
         "@elastic/elasticsearch": "^7.5.1",
         "@google-cloud/translate": "^7.0.0",
         "@prisma/client": "^3.14.0",
