--- a/.env-template
+++ b/.env-template
@@ -29,11 +29,19 @@ IMGIX_REPO="barnes-images"
 
 ASSET_HOST="localhost:4006"
 
+DATABASE_HOST="localhost"
+DATABASE_NAME=""
+DATABASE_USER=""
+DATABASE_PASSWORD=""
+
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB (Preview).
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+### NOTE ###
+# You must replace the DATABASE_HOST and other variables here
 
 DATABASE_URL="postgresql://<DATABASE_USER>:<DATABASE_PASSWORD>@<DATABASE_HOST>:5432/<DATABASE_NAME>?schema=public"
