--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "@typescript-eslint/parser": "^5.22.0",
         "aws-lambda": "^1.0.7",
         "bootstrap": "^4.0.0",
+        "classnames": "^2.3.1",
         "concurrently": "^7.1.0",
         "eslint": "^8.14.0",
         "eslint-config-airbnb": "^19.0.4",
@@ -90,16 +91,16 @@
         "prettier": "^2.6.2",
         "prisma": "^3.14.0",
         "query-string": "6.8.1",
-        "react": "16.3.0",
+        "react": "^16.8.6",
         "react-addons-css-transition-group": "^15.6.2",
         "react-crossfade-image": "^1.1.1",
         "react-device-detect": "^2.2.2",
-        "react-dom": "16.3.0",
+        "react-dom": "^16.8.6",
         "react-gsap": "1.2.0",
         "react-modal": "3.3.2",
         "react-pose": "4.0.5",
         "react-progressive-image": "0.6.0",
-        "react-router-dom": "4.2.2",
+        "react-router-dom": "^5.1.2",
         "react-scripts": "5.0.1",
         "react-scrollmagic": "2.1.0",
         "react-slick": "0.23.2",
