--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "client-build": "TSC_COMPILE_ON_ERROR=true react-scripts build",
         "build": "npm run client-build && rm -rf dist && npm run build-server",
         "postbuild": "cp -r build dist && rm -rf build && make views",
-        "test": "react-scripts test",
+        "test:client": "react-scripts test",
         "eject": "react-scripts eject",
         "build-server": "tsc -p server/",
         "local-server": "NODE_DEBUG=email-templates nodemon dist/server/app.js",
@@ -55,6 +55,7 @@
         ]
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^5.16.5",
         "@types/connect-pg-simple": "^7.0.0",
         "@types/email-templates": "^10.0.0",
         "@types/express": "^4.17.13",
@@ -72,6 +73,8 @@
         "bootstrap": "^4.0.0",
         "classnames": "^2.3.1",
         "concurrently": "^7.1.0",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.6",
         "eslint": "^8.14.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-airbnb-typescript": "^17.0.0",
@@ -83,6 +86,7 @@
         "eslint-plugin-react-hooks": "^4.5.0",
         "font-awesome": "4.7.0",
         "gsap": "2.1.3",
+        "jest-watch-typeahead": "^0.6.5",
         "jquery": "3.3.1",
         "lodash.throttle": "4.1.1",
         "nodemon": "^2.0.16",
@@ -104,6 +108,7 @@
         "react-scripts": "5.0.1",
         "react-scrollmagic": "2.1.0",
         "react-slick": "0.23.2",
+        "react-test-renderer": "^18.2.0",
         "react-textfit": "1.1.0",
         "react-visibility-sensor": "5.1.1",
         "reactstrap": "7.1.0",
