--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
         "sass": "1.54.0",
         "scrollmagic": "2.0.7",
         "scrollmagic-plugin-gsap": "1.0.3",
+        "serverless": "^3.22.0",
         "slick-carousel": "1.8.1",
         "styled-components": "4.3.2",
         "typescript": "^4.6.4"
