--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^12.1.5",
         "@types/connect-pg-simple": "^7.0.0",
         "@types/email-templates": "^10.0.0",
         "@types/express": "^4.17.13",
