we will use lambda function urls and not api gateway

--- a/serverless.yml
+++ b/serverless.yml
@@ -21,6 +21,7 @@ resources:
 
 functions:
     server:
+        url: true
         handler: dist/server/handler.server
         events:
             - http: ANY /
