--- a/serverless.yml
+++ b/serverless.yml
@@ -34,7 +34,7 @@ functions:
                   Condition: IsProduction
                   name: Schedule_ElasticSearchSyncJob
                   description: "An event scheduled to run the ElasticSearchSyncJob once each day at 1 AM EST/5 AM UTC"
-                  rate: cron(0 5 * * *)
+                  rate: cron(0 5 * * ? *)
                   enabled: true
                   input:
                       path: "/api/job/ElasticSearchSyncJob"
@@ -44,7 +44,7 @@ functions:
                 Condition: IsProduction
                 name: Schedule_BookmarkDeliveryJob
                 description: "An event scheduled to run the BookmarkDeliveryJob once every 3 hours"
-                rate: cron(0 */3 * * *)
+                rate: cron(0 */3 * * ? *)
                 enabled: true
                 input:
                     path: "/api/job/BookmarkDeliveryJob"
@@ -53,8 +53,8 @@ functions:
             - schedule:
                 Condition: IsProduction
                 name: Schedule_StoryDeliveryJob
-                description: "An event scheduled to run the StoryDeliveryJob once every 3 hours"
-                rate: cron(0 */3 * * *)
+                description: "An event scheduled to run the StoryDeliveryJob once every 4 hours"
+                rate: cron(0 */4 * * ? *)
                 enabled: true
                 input:
                     path: "/api/job/StoryDeliveryJob"
@@ -64,7 +64,7 @@ functions:
                 Condition: IsProduction
                 name: Schedule_StorySyncJob
                 description: "An event scheduled to run the StorySyncJob once each day at 2 AM EST/6 AM UTC"
-                rate: cron(0 6 * * *)
+                rate: cron(0 6 * * ? *)
                 enabled: true
                 input:
                     path: "/api/job/StorySyncJob"
@@ -74,7 +74,7 @@ functions:
                 Condition: IsProduction
                 name: Schedule_SessionClearJob
                 description: "An event scheduled to run the SessionClearJob once every 3 days at 12 AM EST/4 AM UTC"
-                rate: cron(0 4 */3 * *)
+                rate: cron(0 4 */3 * ? *)
                 enabled: false
                 input:
                     path: "/api/job/SessionClearJob"
