specify prisma client versions, include is deployment bundle

--- a/serverless.yml
+++ b/serverless.yml
@@ -21,12 +21,10 @@ resources:
 
 functions:
     server:
-        url: true
+        url:
+            cors: true
         handler: dist/server/handler.server
         events:
-            - http: ANY /
-            - http: "ANY /{proxy+}"
-
             # For our Schedule jobs, we only want to deploy the schedules
             # in our Production deployment stage
 
@@ -41,44 +39,44 @@ functions:
                       httpMethod: "POST"
 
             - schedule:
-                Condition: IsProduction
-                name: Schedule_BookmarkDeliveryJob
-                description: "An event scheduled to run the BookmarkDeliveryJob once every 3 hours"
-                rate: cron(0 */3 * * ? *)
-                enabled: true
-                input:
-                    path: "/api/job/BookmarkDeliveryJob"
-                    httpMethod: "POST"
+                  Condition: IsProduction
+                  name: Schedule_BookmarkDeliveryJob
+                  description: "An event scheduled to run the BookmarkDeliveryJob once every 3 hours"
+                  rate: cron(0 */3 * * ? *)
+                  enabled: true
+                  input:
+                      path: "/api/job/BookmarkDeliveryJob"
+                      httpMethod: "POST"
 
             - schedule:
-                Condition: IsProduction
-                name: Schedule_StoryDeliveryJob
-                description: "An event scheduled to run the StoryDeliveryJob once every 4 hours"
-                rate: cron(0 */4 * * ? *)
-                enabled: true
-                input:
-                    path: "/api/job/StoryDeliveryJob"
-                    httpMethod: "POST"
+                  Condition: IsProduction
+                  name: Schedule_StoryDeliveryJob
+                  description: "An event scheduled to run the StoryDeliveryJob once every 4 hours"
+                  rate: cron(0 */4 * * ? *)
+                  enabled: true
+                  input:
+                      path: "/api/job/StoryDeliveryJob"
+                      httpMethod: "POST"
 
             - schedule:
-                Condition: IsProduction
-                name: Schedule_StorySyncJob
-                description: "An event scheduled to run the StorySyncJob once each day at 2 AM EST/6 AM UTC"
-                rate: cron(0 6 * * ? *)
-                enabled: true
-                input:
-                    path: "/api/job/StorySyncJob"
-                    httpMethod: "POST"
+                  Condition: IsProduction
+                  name: Schedule_StorySyncJob
+                  description: "An event scheduled to run the StorySyncJob once each day at 2 AM EST/6 AM UTC"
+                  rate: cron(0 6 * * ? *)
+                  enabled: true
+                  input:
+                      path: "/api/job/StorySyncJob"
+                      httpMethod: "POST"
 
             - schedule:
-                Condition: IsProduction
-                name: Schedule_SessionClearJob
-                description: "An event scheduled to run the SessionClearJob once every 3 days at 12 AM EST/4 AM UTC"
-                rate: cron(0 4 */3 * ? *)
-                enabled: false
-                input:
-                    path: "/api/job/SessionClearJob"
-                    httpMethod: "POST"
+                  Condition: IsProduction
+                  name: Schedule_SessionClearJob
+                  description: "An event scheduled to run the SessionClearJob once every 3 days at 12 AM EST/4 AM UTC"
+                  rate: cron(0 4 */3 * ? *)
+                  enabled: false
+                  input:
+                      path: "/api/job/SessionClearJob"
+                      httpMethod: "POST"
 
 package:
     patterns:
@@ -86,3 +84,7 @@ package:
         - "dist/**"
         - "package.json"
         - "node_modules/**"
+        - "!node_modules/.prisma/client/libquery_engine-*"
+        - "node_modules/.prisma/client/libquery_engine-rhel-*"
+        - "!node_modules/prisma/libquery_engine-*"
+        - "!node_modules/@prisma/engines/**"
