--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
         "eslint-plugin-react-hooks": "^4.5.0",
         "font-awesome": "4.7.0",
         "gsap": "2.1.3",
+        "html-react-parser": "^3.0.4",
         "jest-watch-typeahead": "^0.6.5",
         "jquery": "3.3.1",
         "lodash.throttle": "4.1.1",
@@ -114,6 +115,7 @@
         "react-visibility-sensor": "5.1.1",
         "reactstrap": "7.1.0",
         "redux": "4.0.1",
+        "sanitize-html": "^2.7.2",
         "sass": "1.54.0",
         "scrollmagic": "2.0.7",
         "scrollmagic-plugin-gsap": "1.0.3",
