--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
         "react-dom": "^16.8.6",
         "react-gsap": "1.2.0",
         "react-modal": "3.3.2",
+        "react-player": "^2.11.0",
         "react-pose": "4.0.5",
         "react-progressive-image": "0.6.0",
         "react-router-dom": "^5.1.2",
