--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "build": "npm run client-build && rm -rf dist && npm run build-server",
         "postbuild": "cp -r build dist && rm -rf build && make views",
         "test:client": "react-scripts test --transformIgnorePatterns \"node_modules/(?!my-library-dir)/\"",
+        "test:server": "jest server/test",
         "eject": "react-scripts eject",
         "build-server": "tsc -p server/",
         "local-server": "NODE_DEBUG=email-templates nodemon dist/server/app.js",
@@ -75,6 +76,7 @@
         "@typescript-eslint/eslint-plugin": "^5.22.0",
         "@typescript-eslint/parser": "^5.22.0",
         "aws-lambda": "^1.0.7",
+        "aws-sdk-client-mock": "^2.0.0",
         "bootstrap": "^4.0.0",
         "classnames": "^2.3.1",
         "concurrently": "^7.1.0",
@@ -128,6 +130,7 @@
         "serverless": "^3.22.0",
         "slick-carousel": "1.8.1",
         "styled-components": "4.3.2",
+        "ts-jest": "^29.0.3",
         "typescript": "^4.6.4"
     },
     "proxy": "http://localhost:4006"
