--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
         "query-string": "6.8.1",
         "react": "^16.8.6",
         "react-addons-css-transition-group": "^15.6.2",
+        "react-alice-carousel": "^2.7.0",
         "react-compare-slider": "^2.2.0",
         "react-crossfade-image": "^1.1.1",
         "react-device-detect": "^2.2.2",
