--- a/.env-template
+++ b/.env-template
@@ -17,6 +17,10 @@ AWS_SECRET_ACCESS_KEY=""
 REACT_APP_CATCHOOM_ACCESS_TOKEN=""
 REACT_APP_CATCHOOM_REQUEST_URL="https://search.craftar.net/v1/search"
 
+REACT_APP_VUFORIA_REQUEST_URL="https://cloudreco.vuforia.com/v1/query"
+REACT_APP_VUFORIA_CLIENT_ACCESS_KEY=""
+REACT_APP_VUFORIA_CLIENT_SECRET_KEY=""
+
 SENDGRID_USERNAME=""
 SENDGRID_PASSWORD=""
 SENDGRID_EMAIL=""
