--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "email-validator": "^2.0.4",
         "express": "^4.18.1",
         "express-session": "^1.17.3",
+        "form-data-encoder": "^1.7.2",
+        "formdata-node": "^4.4.1",
         "multer": "^1.4.4",
         "nodemailer": "^6.7.7",
         "pg": "^8.7.3",
@@ -33,7 +35,7 @@
         "test:server": "jest server/test",
         "eject": "react-scripts eject",
         "build-server": "tsc -p server/",
-        "local-server": "NODE_DEBUG=email-templates nodemon dist/server/app.js",
+        "local-server": "PORT=4006 nodemon dist/server/app.js",
         "watch-server": "tsc -w -p server",
         "dev": " concurrently \"npm run watch-server\" \"npm run local-server\"",
         "deploy:dev": "npx serverless deploy --verbose --stage dev",
@@ -62,6 +64,7 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^12.1.5",
         "@types/connect-pg-simple": "^7.0.0",
+        "@types/crypto-js": "^4.1.1",
         "@types/email-templates": "^10.0.0",
         "@types/express": "^4.17.13",
         "@types/express-session": "^1.17.4",
