--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
         "email-validator": "^2.0.4",
         "express": "^4.18.1",
         "express-session": "^1.17.3",
-        "form-data-encoder": "^1.7.2",
-        "formdata-node": "^4.4.1",
         "multer": "^1.4.4",
         "nodemailer": "^6.7.7",
         "pg": "^8.7.3",
-        "serverless-http": "^3.0.1"
+        "serverless-http": "^3.0.1",
+        "vuforia-api": "^0.3.2"
     },
     "scripts": {
         "start": "PORT=3006 react-scripts start",
