--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
     "name": "barnes-focus-lambda",
     "version": "0.1.0",
     "private": true,
+    "type":"module",
     "prisma": {
         "seed": "npx ts-node --compiler-options {\"module\":\"CommonJS\"} ./prisma/seeds/translations/index.ts"
     },
     "dependencies": {
+        "@adminjs/express": "^6.0.0",
+        "@adminjs/prisma": "^5.0.1",
         "@aws-sdk/client-s3": "^3.131.0",
         "@aws-sdk/client-translate": "^3.159.0",
         "@elastic/elasticsearch": "^7.5.1",
         "@prisma/client": "^3.14.0",
+        "adminjs": "^7.2.1",
         "axios": "^0.27.2",
         "connect-pg-simple": "^7.0.0",
         "cookie-parser": "^1.4.6",
@@ -18,11 +22,13 @@
         "email-templates": "^10.0.1",
         "email-validator": "^2.0.4",
         "express": "^4.18.1",
+        "express-formidable": "^1.2.0",
         "express-session": "^1.17.3",
         "multer": "^1.4.4",
         "nodemailer": "^6.7.7",
         "pg": "^8.7.3",
         "serverless-http": "^3.0.1",
+        "tslib": "^2.6.2",
         "vuforia-api": "^0.3.2"
     },
     "scripts": {
