--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,12 +4,14 @@
 		"target": "es6",
 		"noImplicitAny": false,
 		"noEmitOnError": false,
+		"noEmit": false,
 		"moduleResolution": "node",
 		"sourceMap": true,
 		"outDir": "../dist/server",
 		"baseUrl": "../server",
 		"esModuleInterop": true,
-		"jsx": "react"
+		"jsx": "react",
+		"skipLibCheck": true
 	},
 	"compileOnSave": true,
 	"include": [
