--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@prisma/client": "^3.14.0",
         "adminjs": "^6.8.7",
         "axios": "^0.27.2",
+        "basic-auth": "^2.0.1",
         "connect-pg-simple": "^7.0.0",
         "cookie-parser": "^1.4.6",
         "dotenv": "^16.0.0",
