working makefile command and changed package.json script name for adminjs bundling

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
         "deploy:dev": "npx serverless deploy --verbose --stage dev",
         "deploy:prod": "npx serverless deploy --verbose --stage prod",
         "prisma:generate": "prisma generate",
-        "adminjs:bundle": "node dist/server/bundle.js"
+        "bundles": "node dist/server/bundle.js"
     },
     "eslintConfig": {
         "extends": [
